--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,9 +14,7 @@
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="{{ site.baseurl }}/css/grayscale.css" rel="stylesheet">
-    <link href="{{ site.baseurl }}/css/timeline.css" rel="stylesheet">
-
+    <link href="{{ site.baseurl }}/css/style.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="{{ site.baseurl }}/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
