--- a/_includes/js.html
+++ b/_includes/js.html
@@ -10,19 +10,11 @@
     <!-- Custom Theme JavaScript -->
     <script src="{{ site.baseurl }}/js/grayscale.js"></script>
 
+    <!-- Waypoints.js-->
+    <script src="{{ site.baseurl }}/js/waypoints.min.js"></script>
+
     <!-- Typed.js -->
     <script src="{{ site.baseurl }}/js/typed.min.js"></script>
-    <script>
-        $(function(){
-            $(".typed").typed({
-                strings: ["Scala", "Craftsmanship", "Swift", "Food", "Testing", "Handstands", "Sarcasm", "JavaScript"],
-                typeSpeed: 60,
-                loop: true,
-                backSpeed: 20
-            });
-        });
-    </script>
-
     {% if site.google-tracking-id %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
