--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,8 @@
     <!-- Custom CSS -->
     <link href="{{ site.baseurl }}/css/style.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href="{{ site.baseurl }}/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="{{ site.baseurl }}/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="{{ site.baseurl }}/assets/animate.min.css" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
