--- a/_sass/timeline.scss
+++ b/_sass/timeline.scss
@@ -202,241 +202,28 @@
   }
 }
 
-#cd-timeline {
-  position: relative;
-  padding: 2em 0;
-  margin-top: 2em;
-  margin-bottom: 2em; }
-#cd-timeline::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 18px;
-  height: 100%;
-  width: 4px;
-  background: rgba(0, 0, 0, 0.3); }
-@media only screen and (min-width: 1070px) {
-  #cd-timeline {
-    margin-top: 3em;
-    margin-bottom: 3em; }
-  #cd-timeline::before {
-    left: 50%;
-    margin-left: -2px; } }
+@-webkit-keyframes pulse {
+  0% { -webkit-transform: scale(1); }
+  50% { -webkit-transform: scale(1.1); }
+  100% { -webkit-transform: scale(1); }
+}
+@keyframes pulse {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.1); }
+  100% { transform: scale(1); }
+}
+.pulse {
+  -webkit-animation-name: pulse;
+  animation-name: pulse;
+}
 
-.cd-timeline-block {
-  position: relative;
-  margin: 2em 0; }
-.cd-timeline-block::after {
-  clear: both;
-  content: "";
-  display: table; }
-.cd-timeline-block:first-child {
-  margin-top: 0; }
-.cd-timeline-block:last-child {
-  margin-bottom: 0; }
-@media only screen and (min-width: 1070px) {
-  .cd-timeline-block {
-    margin: 4em 0; }
-  .cd-timeline-block:first-child {
-    margin-top: 0; }
-  .cd-timeline-block:last-child {
-    margin-bottom: 0; } }
+.animated {
+   -webkit-animation-duration: 1s;
+   animation-duration: 1s;
+   -webkit-animation-fill-mode: both;
+   animation-fill-mode: both;
+ }
 
-.cd-timeline-img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  box-shadow: 0 0 0 4px #ffffff, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05); }
-.cd-timeline-img.cd-picture {
-  background: #303e49; }
-.cd-timeline-img.cd-movie {
-  background: #303e49; }
-.cd-timeline-img.cd-location {
-  background: #303e49; }
-@media only screen and (min-width: 1070px) {
-  .cd-timeline-img {
-    width: 120px;
-    height: 120px;
-    left: 50%;
-    margin-left: -60px;
-    -webkit-transform: translateZ(0);
-    -webkit-backface-visibility: hidden; }
-  .cssanimations .cd-timeline-img.is-hidden {
-    visibility: hidden; }
-  .cssanimations .cd-timeline-img.bounce-in {
-    visibility: visible;
-    -webkit-animation: cd-bounce-1 0.6s;
-    animation: cd-bounce-1 0.6s; } }
-
-@-webkit-keyframes cd-bounce-1 {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0.5); }
-  60% {
-    opacity: 1;
-    -webkit-transform: scale(1.2); }
-  100% {
-    -webkit-transform: scale(1); } }
-
-@keyframes cd-bounce-1 {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale(0.5);
-    transform: scale(0.5); }
-  60% {
-    opacity: 1;
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2); }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1); } }
-
-.cd-timeline-content {
-  position: relative;
-  margin-left: 600px;
-  background: #ffffff;
-  border-radius: 0.25em;
-  padding: 1em;
-  box-shadow: 0 3px 0 #d6dee4; }
-.cd-timeline-content::after {
-  clear: both;
-  content: "";
-  display: table; }
-.cd-timeline-content h2 {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  color: #303e49; }
-.cd-timeline-content p, .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
-  font-size: 13px;
-  font-size: 0.8125rem; }
-.cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
-  display: inline-block; }
-.cd-timeline-content p {
-  margin: 1em 0;
-  line-height: 1.6; }
-.cd-timeline-content .cd-read-more {
-  float: right;
-  padding: .8em 1em;
-  background: #acb7c0;
-  color: #ffffff;
-  border-radius: 0.25em; }
-.no-touch .cd-timeline-content .cd-read-more:hover {
-  background-color: #bac4cb; }
-.cd-timeline-content .cd-date {
-  float: left;
-  padding: .8em 0;
-  opacity: .7; }
-.cd-timeline-content::before {
-  content: '';
-  position: absolute;
-  top: 16px;
-  right: 100%;
-  height: 0;
-  width: 0;
-  border: 10px solid transparent;
-  border-right: 7px solid #ffffff; }
-@media only screen and (min-width: 650px) {
-  .cd-timeline-content h2 {
-    font-size: 20px;
-    font-size: 1.25rem; }
-  .cd-timeline-content p {
-    font-size: 16px;
-    font-size: 1rem; }
-  .cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
-    font-size: 14px;
-    font-size: 0.875rem; } }
-@media only screen and (min-width: 1070px) {
-  .cd-timeline-content {
-    margin-left: 0;
-    padding: 1.6em;
-    width: 45%; }
-  .cd-timeline-content::before {
-    top: 24px;
-    left: 100%;
-    border-color: transparent;
-    border-left-color: #ffffff; }
-  .cd-timeline-content .cd-read-more {
-    float: left; }
-  .cd-timeline-content .cd-date {
-    position: absolute;
-    width: 100%;
-    left: 122%;
-    top: 6px;
-    font-size: 16px;
-    font-size: 1rem; }
-  .cd-timeline-block:nth-child(even) .cd-timeline-content {
-    float: right; }
-  .cd-timeline-block:nth-child(even) .cd-timeline-content::before {
-    top: 84px;
-    left: auto;
-    right: 100%;
-    border-color: transparent;
-    border-right-color: #ffffff; }
-  .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-read-more {
-    float: right; }
-  .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-date {
-    left: auto;
-    right: 122%;
-    text-align: right; }
-  .cssanimations .cd-timeline-content.is-hidden {
-    visibility: hidden; }
-  .cssanimations .cd-timeline-content.bounce-in {
-    visibility: visible;
-    -webkit-animation: cd-bounce-2 0.6s;
-    animation: cd-bounce-2 0.6s; } }
-
-@media only screen and (min-width: 1070px) {
-  .cssanimations .cd-timeline-block:nth-child(even) .cd-timeline-content.bounce-in {
-    -webkit-animation: cd-bounce-2-inverse 0.6s;
-    animation: cd-bounce-2-inverse 0.6s; } }
-
-@-webkit-keyframes cd-bounce-2 {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-100px); }
-  60% {
-    opacity: 1;
-    -webkit-transform: translateX(20px); }
-  100% {
-    -webkit-transform: translateX(0); } }
-
-@keyframes cd-bounce-2 {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-100px);
-    transform: translateX(-100px); }
-  60% {
-    opacity: 1;
-    -webkit-transform: translateX(20px);
-    transform: translateX(20px); }
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0); } }
-
-@-webkit-keyframes cd-bounce-2-inverse {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(100px); }
-  60% {
-    opacity: 1;
-    -webkit-transform: translateX(-20px); }
-  100% {
-    -webkit-transform: translateX(0); } }
-
-@keyframes cd-bounce-2-inverse {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(100px);
-    transform: translateX(100px); }
-  60% {
-    opacity: 1;
-    -webkit-transform: translateX(-20px);
-    transform: translateX(-20px); }
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0); } }
-
-
+.hidden {
+    visibility: hidden;
+}
