Apparently a few years passed since my last update. Ops

--- a/_includes/content/intro.html
+++ b/_includes/content/intro.html
@@ -11,7 +11,10 @@
                                 Something
                             </div>
                         </div>
-                        <div class="intro-text">{{content | markdownify }}</div>
+                        <div class="intro-text">
+                            <span>Hi, I am <strong>Silvia</strong>.</span>
+                            {{content | markdownify }}
+                        </div>
                         <ul class="list-inline social-buttons">
                             {% for network in page.social %}
                             <li><a href="{{ network.url }}"><i class="fa fa-{{ network.title }} fa-fw"></i></a></li>
