--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,7 @@
 $dark: #121212; //rgba(18, 18, 18, 100)
 $light: #ffffff; //rgba(255, 255, 255, 100)
 $color3: #ffeeb5; //rgba(255, 238, 181, 100)
-$color4: #fc913a; //rgba(252, 145, 58, 100)
-$color5: #ff4e50; //rgba(255, 78, 80, 100)
+$accent: #ff4b1f; //rgba(252, 145, 58, 100)
+//$color4: #fc913a; //rgba(252, 145, 58, 100)
+$color5: #1fddff; //rgba(255, 78, 80, 100)
+//$color5: #ff4e50; //rgba(255, 78, 80, 100)
