--- a/_sass/greyscale.scss
+++ b/_sass/greyscale.scss
@@ -42,10 +42,10 @@ input {
   display: inline-block;
   border: none;
   padding: 2px 0;
-  border-bottom: solid 2px $color5;
+  border-bottom: solid 2px $accent;
   -webkit-transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
   transition: all 0.3s cubic-bezier(0.64, 0.09, 0.08, 1);
-  color: $color5;
+  color: $accent;
 }
 input:focus, input:valid {
   box-shadow: none;
@@ -53,7 +53,7 @@ input:focus, input:valid {
   background-position: 0 0;
 }
 input:focus::-webkit-input-placeholder, input:valid::-webkit-input-placeholder {
-  color: $color5;
+  color: $accent;
   font-size: 11px;
   -webkit-transform: translateY(-20px);
   transform: translateY(-20px);
@@ -63,10 +63,10 @@ select {
   margin: 2px 2px;
   background-color: transparent;
   padding: 2px 0;
-  color: $color5;
+  color: $accent;
   border: none;
   border-radius: 0;
-  border-bottom: solid 2px $color5;
+  border-bottom: solid 2px $accent;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -76,7 +76,7 @@ textarea{
   display: block;
   width: 100%;
   padding: 20px;
-  border: solid 2px $color5;
+  border: solid 2px $accent;
   border-radius: 16px;
   resize: none;
   margin-bottom: 10px;
@@ -91,7 +91,7 @@ select label {
   display: none;
 }
 a {
-  color: $color4;
+  color: $accent;
   font-weight: 700;
   /* color: #219ab3; */
   -webkit-transition: all .2s ease-in-out;
@@ -107,7 +107,7 @@ a.special-link {
 a:hover,
 a:focus {
   text-decoration: none;
-  color: $color5;
+  color: $accent;
 }
 
 .light {
@@ -119,7 +119,7 @@ a:focus {
   border-bottom: 3px solid $color3;
   text-transform: uppercase;
   font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  background-color: $color5;
+  background-color: $accent;
   color: $light;
 }
 
@@ -147,7 +147,7 @@ a:focus {
 
 .navbar-custom .nav li.active {
   outline: none;
-  background-color: $color5;
+  background-color: $accent;
 }
 
 .navbar-custom .nav li a {
@@ -160,7 +160,7 @@ a:focus {
 .navbar-custom .nav li a:focus,
 .navbar-custom .nav li a.active {
   outline: 0;
-  background-color: $color5;
+  background-color: $accent;
 }
 
 @media(min-width:767px) {
@@ -178,12 +178,12 @@ a:focus {
   .top-nav-collapse {
     padding: 0;
     background: rgba(255,78,81,1);
-    background: -moz-linear-gradient(left, $color5 0%, $color4 100%);
-    background: -webkit-gradient(left top, right top, color-stop(0%, $color5), color-stop(100%, $color4));
-    background: -webkit-linear-gradient(left, $color5 0%, $color4 100%);
-    background: -o-linear-gradient(left, $color5 0%, $color4 100%);
-    background: -ms-linear-gradient(left, $color5 0%, $color4 100%);
-    background: linear-gradient(to right, $color5 0%, $color4 100%);
+    background: -moz-linear-gradient(left, $accent 0%, $color5 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, $accent), color-stop(100%, $color5));
+    background: -webkit-linear-gradient(left, $accent 0%, $color5 100%);
+    background: -o-linear-gradient(left, $accent 0%, $color5 100%);
+    background: -ms-linear-gradient(left, $accent 0%, $color5 100%);
+    background: linear-gradient(to right, $accent 0%, $color5 100%);
   }
 
   .navbar-custom.top-nav-collapse {
@@ -314,14 +314,14 @@ transform: scale(1);
   font-size: 20px;
   padding: 0.5em 2em;
   color: $color3;
-  background-color: $color5;
+  background-color: $accent;
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
 }
 
 .btn:hover {
-  color: $color5;
+  color: $accent;
   background-color: $color3;
 }
 
@@ -360,7 +360,7 @@ ul.social-buttons li a {
   line-height: 40px;
   outline: 0;
   color: $color3;
-  background-color: $color5;
+  background-color: $accent;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
   transition: all .3s;
@@ -369,7 +369,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  color: $color5;
+  color: $accent;
   background-color: $color3;
 }
 
