Minor fixes - starting to create sass variables

--- a/_sass/intro.scss
+++ b/_sass/intro.scss
@@ -39,7 +39,7 @@
     display: table-cell;
     vertical-align: middle;
     .brand-heading {
-      font-size: 40px;
+      font-size: $font-size-huge;
     }
     .intro-text, .intro-text p  {
       font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
