--- a/_sass/timeline.scss
+++ b/_sass/timeline.scss
@@ -141,7 +141,7 @@
 
   .timeline>li .timeline-image h4 {
     margin-top: 16px;
-    font-size: 13px;
+    font-size: $font-size-small;
     line-height: 18px;
   }
 
