--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -5,3 +5,6 @@ $accent: #ff4b1f; //rgba(252, 145, 58, 100)
 //$color4: #fc913a; //rgba(252, 145, 58, 100)
 $color5: #1fddff; //rgba(255, 78, 80, 100)
 //$color5: #ff4e50; //rgba(255, 78, 80, 100)
+
+$font-size-small: 14px;
+$font-size-huge: 40px;
