--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
    <!-- Footer -->
     <footer>
         <div class="container-fluid footer text-center">
-            <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="#About" class="page-scroll">{{ site.author }}</a></p>
-            <p><a href="https://github.com/simad/simad.github.io" target='_blank'>Source Code</a> | Based on <a href="https://github.com/kirbyt/timeline-jekyll-theme" target='_blank'>Timeline</a> for <a href="https://jekyllrb.com/" target='_blank'>Jekyll</a></p>
+            <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://twitter.com/silmnd" target="_blank" class="page-scroll">{{ site.author }}</a></p>
+            <p><a href="https://github.com/simad/simad.github.io" target='_blank'>Source Code</a> on <i class="fa fa-github" aria-hidden="true"></i> | Based on <a href="https://github.com/kirbyt/timeline-jekyll-theme" target='_blank'>Timeline</a> for <a href="https://jekyllrb.com/" target='_blank'>Jekyll</a></p>
         </div>
     </footer>
 
