--- a/_sass/greyscale.scss
+++ b/_sass/greyscale.scss
@@ -385,6 +385,7 @@ footer p {
   font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: 700;
   letter-spacing: 1px;
+  font-size: $font-size-small;
 }
 
 ::-moz-selection {
