--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-code"></i> {{ site.title }}
+                    <i class="fa fa-code"></i> {{ site.author_full }}
                 </a>
             </div>
 
