--- a/src/_includes/layouts/_default/base.njk
+++ b/src/_includes/layouts/_default/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   {% include 'layouts/partials/head.njk' %}
   <body>
     {# {% include 'layouts/partials/header.njk' %} #}
