--- a/src/_includes/layouts/posts/silvia.njk
+++ b/src/_includes/layouts/posts/silvia.njk
@@ -13,13 +13,10 @@ layout: base
 </svg>
 </div>
     <div class="container mx-auto text-center pt-10 2xl:text-center p-4 sm:p-8 lg:p-2">
-  <h1 class="uppercase font-black">
-      <span class="transform rotate-2 outline text-shadow-primary md:text-shadow-primary-md lg:text-shadow-primary-lg text-7xl sm:text-notgiant md:text-lessgiant lg:text-giant">Silvia</span>
-        </h1>
-          <h1 class="uppercase font-black -mt-8 md:-mt-12 lg:-mt-16 ">
-      <span class="transform -rotate-2 outline text-shadow-secondary md:text-shadow-secondary-md lg:text-shadow-secondary-lg sm:text-5xl md:text-7xl lg:text-notgiant">Mandalá</span>
-        </h1>
-    
+  <h1 class="uppercase font-black outline transform">
+      <div class="rotate-2 text-shadow-primary md:text-shadow-primary-md lg:text-shadow-primary-lg text-notgiant md:text-lessgiant lg:text-giant">Silvia</div>
+      <div class="-rotate-3 -mt-8 md:-mt-12 lg:-mt-16 text-shadow-secondary md:text-shadow-secondary-md lg:text-shadow-secondary-lg text-5xl md:text-7xl lg:text-notgiant">Mandalá</div>
+    </h1>
       <p class="text-rad-shade mb-20 text-2xl md:text-3xl mt-10 leading-loose"
         >Independent <strong>Coffee => Code Converter</strong>, currently at
         <a class="bg-rad-shade text-rad-background dark:hover:text-rad-background font-black box" href="https://ebay.com">eBay</a></p
