wow, such update

--- a/src/_includes/layouts/posts/silvia.njk
+++ b/src/_includes/layouts/posts/silvia.njk
@@ -17,12 +17,16 @@ layout: base
       <div class="rotate-2 text-shadow-primary md:text-shadow-primary-md lg:text-shadow-primary-lg text-notgiant md:text-lessgiant lg:text-giant">Silvia</div>
       <div class="-rotate-3 -mt-8 md:-mt-12 lg:-mt-16 text-shadow-secondary md:text-shadow-secondary-md lg:text-shadow-secondary-lg text-5xl md:text-7xl lg:text-notgiant">Mandalá</div>
     </h1>
-      <p class="text-rad-shade mb-20 text-2xl md:text-3xl mt-10 leading-loose"
+      <p class="text-rad-shade mb-10 text-2xl md:text-3xl mt-10 leading-loose"
         >Independent <strong>Coffee => Code Converter</strong>, currently at
-        <a class="bg-rad-shade text-rad-background dark:hover:text-rad-background font-black box" href="https://ebay.com">eBay</a></p
+        <a class="bg-rad-shade text-rad-background dark:hover:text-rad-background font-black box" href="https://caisgroup.com">CAIS</a></p
       >
+       <p class="text-rad-shade mb-10 text-2xl md:text-3xl mt-10 leading-loose transform rotate-3"
+              >
+              <a class="bg-rad-shade text-rad-background dark:hover:text-rad-background font-black box" href="/now">N O W</a></p
+            >
       <div class="flex flex-wrap justify-around mb-10 container mx-auto">
-      <p class="boxes transform rotate-1">♥️ Climbing</p>
+      <p class="boxes transform rotate-1">🩷 Climbing</p>
       <p class="boxes transform -rotate-3">I lift heavy things</p>
       <p class="boxes transform rotate-1">ALL.THE.BOOKS!</p>
       <p class="boxes transform -rotate-3">Owning too many musical instruments I can't actually play</p>
@@ -35,7 +39,6 @@ layout: base
       <h2 class="text-rad-shade">Somewhere not here</h2>
       <ul class="links mb-20 transform -rotate-1">
       <li class="inline"><a class="hover:underline" rel="me" href='mail&#116;&#111;&#58;%73%69%6&#67;&#37;2&#69;m&#37;61nda%6C&#97;%4&#48;gma%69%6&#67;&#46;&#99;om'>E-Mail</a></li>
-        <li class="inline"><a class="hover:underline" rel="me" target="_blank" href="https://twitter.com/silmnd">Twitter</a></li>
         <li class="inline"
           ><a class="hover:underline" rel="me" target="_blank" href="https://www.linkedin.com/in/silviamandala"
             >LinkedIn</a
