--- a/src/index.twig
+++ b/src/index.twig
@@ -1,5 +1,5 @@
 ---
-title: 'Silvia Mandalà | Software Engineer'
+title: 'About'
 ---
 
 {% extends "_includes/layout.twig" %}
@@ -13,7 +13,7 @@ title: 'Silvia Mandalà | Software Engineer'
       </h1>
       <p class="text-rad-shade mb-10 text-2xl md:text-3xl mt-10 leading-loose"
       >Independent <strong>Coffee => Code Converter</strong>, currently at
-        <a class="box" href="https://caisgroup.com">CAIS</a></p
+        <a class="box" target="_blank" href="https://caisgroup.com">CAIS</a></p
       >
       <p class="text-shade mb-10 text-2xl md:text-3xl mt-10 leading-loose transform rotate-3"
       >
