--- a/src/_styles/base.css
+++ b/src/_styles/base.css
@@ -18,10 +18,14 @@ html {
 }
 
 .box {
-  @apply font-black px-4 py-2 bg-shade text-background tracking-widest  hover:bg-primary ;
+  @apply font-black ml-2 px-4 py-2 bg-shade text-background tracking-widest   hover:bg-primary ;
 }
 .boxes {
-  @apply px-4 py-2 bg-shade text-background font-black mb-8 mr-2 text-xl tracking-wide;
+  @apply px-4 py-2 bg-shade text-background font-black mb-8 mr-2 text-xl tracking-wide outline-2 outline-offset-2 outline-shade;
+}
+
+.box-page {
+    @apply px-4 py-2 bg-shade text-background text-2xl;
 }
 .links li::after {
   content: ", ";
