--- a/src/_includes/page.twig
+++ b/src/_includes/page.twig
@@ -14,7 +14,7 @@
   </div>
 
   <div class="text-2xl sm:w-5/6 md:w-4/5 xl:w-1/2 2xl:w-5/12 mt-10 mr-auto ml-auto px-6 lg:px-0">
-    <article class="article whitespace-pre-wrap box-page transform rotate-2 pt-10 px-10">{{ page.date|date("jS M Y") }}
+    <article class="article whitespace-pre-wrap box-page transform rotate-2 pt-10 px-10"><strong>{{ page.date|date("jS M Y") }}</strong>
       {{ content|raw }}
     </article>
   </div>
