--- a/src/_includes/includes.twig
+++ b/src/_includes/includes.twig
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" href="http://localhost:5173/src/_images/pizza-slice.png" sizes="96x96" />
 {% else %}
   <link rel="stylesheet" href="/assets/_main.css">
-  <script src="/assets/_main.js"></script>
+  <script src="/assets/_main.js" defer></script>
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="16x16" />
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="96x96" />
