--- a/src/index.twig
+++ b/src/index.twig
@@ -8,9 +8,9 @@ title: 'About'
   <main>
     <div class="container text-center pt-10 p-4 sm:p-8 lg:p-2">
         <div class="flex md:flex-row flex-col justify-center w-full">
-      <h1 class="uppercase font-black svg-outline transform">
-        <div class="rotate-2 text-shadow-primary md:text-shadow-primary-md lg:text-shadow-primary-lg text-notgiant md:text-lessgiant lg:text-giant">Silvia</div>
-        <div class="-rotate-3 -mt-8 md:-mt-12 lg:-mt-16 text-shadow-secondary md:text-shadow-secondary-md lg:text-shadow-secondary-lg text-5xl md:text-7xl lg:text-notgiant">Mandalá</div>
+      <h1 class="uppercase font-black ont-black svg-outline transform">
+        <div class="rotate-2 text-background text-shadow-primary md:text-shadow-primary-md lg:text-shadow-primary-lg text-notgiant md:text-lessgiant lg:text-giant">Silvia</div>
+        <div class="-rotate-3 text-background -mt-8 md:-mt-12 lg:-mt-16 text-shadow-secondary md:text-shadow-secondary-md lg:text-shadow-secondary-lg text-5xl md:text-7xl lg:text-notgiant">Mandalá</div>
       </h1>
             <p class="text-shade text-xl mt-6 md:text-2xl md:mt-0 leading-loose transform rotate-3 self-center"
             >
@@ -25,10 +25,10 @@ title: 'About'
             <a class="box" target="_blank" href="https://www.kcl.ac.uk/">KCL</a></p
         >
       <div class="flex flex-wrap justify-around mb-2 container mx-auto">
-        <p class="boxes transform rotate-1">🩷 climbing & lifting heavy things</p>
-        <p class="boxes transform -rotate-3">READ.ALL.THE.BOOKS!</p>
+        <p class="boxes transform rotate-1">♥ climbing & lifting heavy things</p>
+        <p class="boxes transform -rotate-3">MUST.READ.ALL.THE.BOOKS!</p>
         <p class="boxes transform rotate-1">My first words were the Italian equivalent of "Go figure!"</p>
-        <p class="boxes transform -rotate-3">I own too many musical instruments I can't actually play</p>
+        <p class="boxes transform -rotate-2">I own too many musical instruments I can't actually play</p>
         <p class="boxes transform rotate-1">I eat like a family of 5</p>
         <p class="boxes transform -rotate-3">...sorry, not sorry</p>
         <p class="boxes transform rotate-1">As a child, I really wanted to be a secret agent</p>
