--- a/src/index.twig
+++ b/src/index.twig
@@ -42,6 +42,10 @@ title: 'About'
                         >Debugging Humans</a
                         ></li>
                     <li class="inline"
+                    ><a class="hover:underline" rel="me" target="_blank" href="/nook"
+                        >Notes</a
+                        ></li>
+                    <li class="inline"
                     ><a class="hover:underline" rel="me" target="_blank" href="https://www.linkedin.com/in/silviamandala"
                         >LinkedIn</a
                         ></li>
