--- a/src/_includes/page.twig
+++ b/src/_includes/page.twig
@@ -3,7 +3,7 @@
 {% block body %}
   <div class="text-center pt-12 lg:pt-20">
     <div>
-      <h1 class="text-3xl md:text-4xl 2xl:text-5xl font-extrabold antialiased"><a href="/">⬅</a> {{ title }}</h1>
+      <h1 class="text-3xl md:text-4xl 2xl:text-5xl font-extrabold antialiased"><a href="/">◀</a> {{ title }}</h1>
       {% if subtitle %}
         <h2 class="mt-6 lg:mt-8 2xl:mt-12 text-2xl lg:text-4xl 2xl:text-5xl">{{ subtitle }}</h2>
       {% endif %}
