--- a/src/index.twig
+++ b/src/index.twig
@@ -14,19 +14,19 @@ title: 'About'
                 </h1>
                 <p class="text-shade text-xl mt-6 md:text-2xl md:mt-0 leading-loose transform rotate-3 self-center"
                 >
-                    <a class="box" href="/now">NOW</a></p>
+                    <a class="box box-shadow-primary hover:box-shadow-secondary" href="/now">NOW</a></p>
             </div>
             <p class="text-rad-shade mt-6 mb-4 text-2xl md:text-3xl leading-loose"
             >Independent <strong>Coffee => Code Converter</strong>, currently at
-                <a class="box" target="_blank" href="https://caisgroup.com">CAIS</a></p
+                <a class="box box-shadow-primary hover:box-shadow-secondary" target="_blank" href="https://caisgroup.com">CAIS</a></p
             >
             <p class="text-rad-shade mb-10 text-2xl md:text-3xl leading-loose"
             >Trainee <strong>Neuroscientist</strong> at
-                <a class="box" target="_blank" href="https://www.kcl.ac.uk/">KCL</a></p
+                <a class="box box-shadow-primary hover:box-shadow-secondary" target="_blank" href="https://www.kcl.ac.uk/">KCL</a></p
             >
             <div class="flex flex-wrap justify-around mb-2 container mx-auto">
                 <p class="boxes transform rotate-1">♥ climbing & lifting heavy things</p>
-                <p class="boxes transform -rotate-3">MUST.READ.ALL.THE.BOOKS!</p>
+                <p class="boxes break-all transform -rotate-3">MUST.READ.ALL.THE.BOOKS!</p>
                 <p class="boxes transform rotate-1">My first words were the Italian equivalent of "Go figure!"</p>
                 <p class="boxes transform -rotate-2">I own too many musical instruments I can't actually play</p>
                 <p class="boxes transform rotate-1">I eat like a family of 5</p>
@@ -50,7 +50,7 @@ title: 'About'
                         >LinkedIn</a
                         ></li>
                     <li class="inline"><a href="#"
-                                          class="contact-link hover:underline after:content-['Mail']"
+                                          class="contact-link hover:underline after:content-['E-mail']"
                                           onclick="window.location.href='mailto:' + 'hi' + '@' + 'silvia.coffee'; return false;">
                         </a></li>
                 </ul>
